Fix mobile spacing

--- a/themes/plenamata/assets/scss/5-blocks/_b-estimatives-area.scss
+++ b/themes/plenamata/assets/scss/5-blocks/_b-estimatives-area.scss
@@ -23,7 +23,11 @@
 
     .main-data {
         margin-bottom: 40px;
-        
+
+        @include mobile {
+            margin-bottom: 0;
+        }
+
         h4 {
             font-size: size(16);
             font-weight: normal;
